--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.3",
+    "mongoose-sequence": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
